# blosc2-bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_era5.cpp  create_rea6.cpp  roundtrip.cpp
